kubernetes/overlays/homelab/dev/catalogue/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
spec:
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject-secret-config: "secret/data/craftista/dev/catalogue/config"
    spec:
      containers:
        - name: catalogue
          image: 8060633493/craftista-catalogue:dev-latest
