kubernetes/overlays/homelab/dev/catalogue/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: catalogue
spec:
  replicas: 1
